fixed layout bugs

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -1271,6 +1271,7 @@ h6 .small,
 h1,
 .h1 {
   font-size: 55px;
+  margin-top: 0px;
 }
 h2,
 .h2 {
@@ -1651,11 +1652,11 @@ pre code {
 }
 .col-xs-3 {
   width: 25%;
-  margin-left: 100px;
   border: #56BD91 solid 1px;
   border-radius: 8px;
   background-color: #56BD91;
   margin-bottom: 50px;
+  margin: 50px;
 }
 .col-xs-2 {
   width: 16.66666667%;
@@ -3052,8 +3053,8 @@ fieldset[disabled] .btn {
   border-radius: 10px;
   margin-left: 100px;
   /* margin-top: 100px; */
-  font-family: open sans;
-  font-size: 16pt;
+  font-family: open sans, helvetica;
+  font-size: 14pt;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -4275,11 +4276,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-nav {
-  float: left;
+  float: right;
   margin: 0;
-  width: 1000px;
-  height: 100px;
+  width: 600px;
+  height: 50px;
   display: -webkit-box;
+  position: absolute;
+  margin-left: 250px;
   }
   .navbar-nav > li {
     float: left;
@@ -4424,8 +4427,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-brand {
   color: white;
-  font-size: 40pt;
-  font-family: Fjalla One;
+  font-size: 32pt;
+  font-family: Fjalla One, Helvetica;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
