--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -13,19 +13,20 @@ h1 {
   font-family: bebas neue;
   font-size: 30pt;
   color: #959595;
+  margin-top: 0px;
 }
 
 
 p {
-  font-family: Open Sans;
-  font-size: 20px;
+  font-family: Open Sans, Helvetica;
+  font-size: 17px;
   color: white;
   text-align: center;
 }
 
 
 .navbar-default .navbar-brand {
-  font-family: 'Fjalla One', sans-serif;
+  font-family: 'Fjalla One', helvetica, sans-serif;
 }
 
 .infocontainer {
@@ -50,7 +51,7 @@ p.nav-text {
 }
 
 .click {
-  font-size: 30pt;
+  font-size: 25pt;
 }
 
 
